# epsh

./: AGENTS.md  Cargo.toml  Makefile  OSSTRING.md  README.md  TESTING.md  TODO.md  check-epsh.t  filter-tests.pl  initial-plan.md  run-tests.py  rust-toolchain.toml
.github/workflows/: test.yml
src/: arith.rs  ast.rs  builtins.rs  encoding.rs  error.rs  eval.rs  expand.rs  glob.rs  lexer.rs  lib.rs  main.rs  parser.rs  redirect.rs  shell_bytes.rs  signal.rs  sys.rs  test_cmd.rs  var.rs
tests/: api_stability.rs  embedding.rs  integration.rs
tests/fixtures/: emit_hex.rs  show_argv.rs  show_env.rs  stat_path.rs
tests/stress/: deep_expansion.sh  deep_recursion.sh  ifs_splitting.sh  large_heredoc.sh  many_comsubs.sh  many_variables.sh  pipeline_chain.sh  run.sh  tight_loop.sh
