[package]
name = "epsh"
version = "0.0.1"
edition = "2024"
description = "embeddable posix shell"
license = "MIT"
repository = "https://github.com/joshuarli/epsh"
readme = "README.md"
keywords = ["shell", "posix", "embedded", "scripting"]
categories = ["command-line-utilities", "os::unix-apis"]
exclude = ["check.t", "check.pl", "check-epsh.t", "filter-tests.pl", "tests/stress/"]

[dependencies]
libc = "0.2.184"

[dev-dependencies]
tempfile = "3"
