[package]
name = "epsh"
version = "0.0.6"
edition = "2024"
rust-version = "1.94"
description = "embeddable posix shell"
license = "MIT"
repository = "https://github.com/joshuarli/epsh"
readme = "README.md"
keywords = ["shell", "posix", "embedded", "scripting"]
categories = ["command-line-utilities", "os::unix-apis"]
exclude = ["check.t", "check.pl", "check-epsh.t", "filter-tests.pl", "tests/stress/", "rust-toolchain.toml"]

[lib]
name = "epsh"
path = "src/lib.rs"

[[bin]]
name = "epsh"
path = "src/main.rs"

[[bin]]
name = "show_argv"
path = "tests/fixtures/show_argv.rs"

[[bin]]
name = "show_env"
path = "tests/fixtures/show_env.rs"

[[bin]]
name = "emit_hex"
path = "tests/fixtures/emit_hex.rs"

[[bin]]
name = "stat_path"
path = "tests/fixtures/stat_path.rs"

[dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
